@@ -1,6 +1,10 @@
 Next release:
 
 	* Removed sysex length limit set in the internal MIDI player and converter.
+	* Eliminated application hangs on Windows when the application is closed enforcedly,
+	  e.g. when the user closes the application console or shuts down the system.
+	* Improved ROM configuration. Added support for default ROM search path which is a directory "roms" located
+	  in the current user home directory.
 
 2013-03-24:
 
